--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,7 +169,7 @@
     <string name="Thank_you_for_your_order">Thank you for your order</string>
     <string name="Wait_for_sms_or_email_order_confirmation">Wait for &lt;b>SMS&lt;/b> or &lt;b>email&lt;/b> order confirmation.</string>
     <string name="This_is_a_sample_app">This is a sample app</string>
-    <string name="Sample_app_description">Thank you for your time. To find out more about this project, please visit us here: <a href="http://openshop.io/">Openshop.io</a>.</string>
+    <string name="Sample_app_description">Thank you for shopping with us.</string>
     <string name="Link_is_invalid">Link is invalid</string>
     <string name="Min">Min</string>
     <string name="Max">Max</string>
